# CppFinalProj

./: CMakeLists.txt  agents.cpp  agents.h  buffpage.cpp  buffpage.h  buffpage.ui  detailpage.cpp  detailpage.h  detailpage.ui  gamelosebox.cpp  gamelosebox.h  gamelosebox.ui  gamepage.cpp  gamepage.h  gamepage.ui  gamepausepage.cpp  gamepausepage.h  gamepausepage.ui  gamestate.cpp  gamestate.h  gamewinbox.cpp  gamewinbox.h  gamewinbox.ui  history.cpp  history.h  homepage.cpp  homepage.h  homepage.ui  mybutton.cpp  mybutton.h  resourses.qrc  roleedit.cpp  roleedit.h  rolepage.cpp  rolepage.h  rolepage.ui  rolewidget.cpp  rolewidget.h  shoppage.cpp  shoppage.h  (+1 more)
